# fluidSimulations

./: .gitignore  DEVELOPMENT_HISTORY.md  PHASE1_QUICK_START.md  PHASE1_WEEK2_GUIDE.md  PHASE4_QUICK_START.py  PROJECT_STRUCTURE.md  README.md  README_NEW.md  generate_training_data.py  main.py  main_3d.py  phase1_metrics.json  test_metrics.json  test_phase1.py  test_surrogate.py  voxelizer.py
cpp/: C++_BUILD_GUIDE.md  CMakeLists.txt  build.bat  build.sh
cpp/cuda/: CMakeLists.txt  CUDA_BUILD_GUIDE.md  README.md  build.bat  build.sh
cpp/cuda/include/: lbm_kernels.h
cpp/cuda/src/: lbm_kernels.cu  main.cu
cpp/src/: main.cpp
data/: .gitkeep
docs/: ARCHITECTURE.md  DEVELOPMENT_HISTORY.md  SIMULATION_EXPLANATION.md
docs/phase1/: PHASE1_API_REFERENCE.md  PHASE1_QUICK_REFERENCE.md  PHASE1_WEEK2_SUMMARY.md
docs/phase4/: GPU_ACCELERATION_GUIDE.md  PHASE42_GPU_ACCELERATION_COMPLETE.md  PHASE4_3D_LBM_GUIDE.md  PHASE4_SUMMARY.md
models/: .gitkeep
src/: __init__.py
src/phase1/: __init__.py  analyze_phase1.py
src/phase4/: __init__.py  benchmark_gpu.py  lbm_3d.py  lbm_3d_gpu.py  main_3d.py  mesh_loader.py
src/utils/: __init__.py  surrogate_model.py
tests/: test_optimized.py
